[gd_scene load_steps=8 format=3 uid="uid://dcqej3022gbdk"]

[ext_resource type="Script" uid="uid://cqb0m6137q6y8" path="res://scenes/main_menu/settings/settings_crosshair.gd" id="1_8jhp0"]
[ext_resource type="LabelSettings" uid="uid://lo2b2eogk1jn" path="res://assets/themes/title_label_settings.tres" id="2_j81m0"]
[ext_resource type="Script" uid="uid://coxbsxucgposx" path="res://scenes/game_world/crosshair.gd" id="3_uw2kl"]
[ext_resource type="PackedScene" uid="uid://db0ivgs28q5rr" path="res://scenes/main_menu/settings/slider_setting.tscn" id="4_2iwqj"]
[ext_resource type="Texture2D" uid="uid://dfccfxiw0aqif" path="res://assets/images/icons/export-file.svg" id="5_i2t3j"]
[ext_resource type="Texture2D" uid="uid://btgrnb8ku7dyk" path="res://assets/images/icons/import-file.svg" id="6_bq5ho"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b62o0"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="Crosshair" type="VBoxContainer"]
offset_right = 361.0
offset_bottom = 687.0
script = ExtResource("1_8jhp0")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Crosshair"
label_settings = ExtResource("2_j81m0")
vertical_alignment = 1

[node name="Margin2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="CrosshairSettings" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Preview" type="Panel" parent="CrosshairSettings"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b62o0")

[node name="Crosshair" type="Control" parent="CrosshairSettings/Preview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3_uw2kl")

[node name="dot" parent="CrosshairSettings" instance=ExtResource("4_2iwqj")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Dot"
save_this_setting = true
settings_category = "crosshair"
settings_slider_id = "dot_size"
settings_checkbox_id = "dot_enable"
max_value = 10.0
value = 10.0

[node name="length" parent="CrosshairSettings" instance=ExtResource("4_2iwqj")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Length"
save_this_setting = true
settings_category = "crosshair"
settings_slider_id = "length"
max_value = 50.0
value = 20.0
has_checkbox = false

[node name="thickness" parent="CrosshairSettings" instance=ExtResource("4_2iwqj")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Thickness"
save_this_setting = true
settings_category = "crosshair"
settings_slider_id = "thickness"
max_value = 10.0
value = 10.0
has_checkbox = false

[node name="gap" parent="CrosshairSettings" instance=ExtResource("4_2iwqj")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Gap"
save_this_setting = true
settings_category = "crosshair"
settings_slider_id = "gap"
max_value = 25.0
value = 25.0
has_checkbox = false

[node name="outline" parent="CrosshairSettings" instance=ExtResource("4_2iwqj")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Outline"
save_this_setting = true
settings_category = "crosshair"
settings_slider_id = "outline_width"
settings_checkbox_id = "outline_enable"
max_value = 10.0
value = 10.0

[node name="Color" type="HBoxContainer" parent="CrosshairSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="CrosshairSettings/Color"]
layout_mode = 2
size_flags_horizontal = 3
text = "Color"

[node name="crosshair_color" type="ColorPickerButton" parent="CrosshairSettings/Color" groups=["Persist", "PutLabel"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
color = Color(0, 1, 1, 1)

[node name="OutlineColor" type="HBoxContainer" parent="CrosshairSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="CrosshairSettings/OutlineColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Outline color"

[node name="outline_color" type="ColorPickerButton" parent="CrosshairSettings/OutlineColor" groups=["Persist", "PutLabel"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="Margin" type="Control" parent="."]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Export" type="Button" parent="."]
layout_mode = 2
text = "Export"
icon = ExtResource("5_i2t3j")
alignment = 0

[node name="ExportFileDialog" type="FileDialog" parent="."]
size = Vector2i(1280, 720)
access = 2
use_native_dialog = true

[node name="Import" type="Button" parent="."]
layout_mode = 2
text = "Import"
icon = ExtResource("6_bq5ho")
alignment = 0

[node name="ImportFileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(1280, 720)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="Margin3" type="Control" parent="."]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[connection signal="refresh_crosshair" from="." to="CrosshairSettings/Preview/Crosshair" method="_on_options_refresh_crosshair"]
[connection signal="color_changed" from="CrosshairSettings/Color/crosshair_color" to="." method="_on_crosshair_color_color_changed"]
[connection signal="color_changed" from="CrosshairSettings/OutlineColor/outline_color" to="." method="_on_outline_color_color_changed"]
[connection signal="pressed" from="Export" to="." method="_on_export_pressed"]
[connection signal="file_selected" from="ExportFileDialog" to="." method="_on_export_file_dialog_file_selected"]
[connection signal="pressed" from="Import" to="." method="_on_import_pressed"]
[connection signal="file_selected" from="ImportFileDialog" to="." method="_on_import_file_dialog_file_selected"]
